2017-11-22  Sam Steingold  <sds@gnu.org>

	Fix bug#375: (loop ... for x on x ...)
	* loop.lisp (expand-loop): Bind all start forms at the outermost
	level to gensyms and then use the gensyms in the preamble.

2017-11-21  Sam Steingold  <sds@gnu.org>

	Avoid gcc/clang warnings -Wformat
	* spvw_global.d (check_gc_consistency, check_gc_consistency_2):
	Cast format arguments to (unsigned long).
	* spvw_sigsegv.d (print_mem_stats): Likewise.

2017-11-21  Sam Steingold  <sds@gnu.org>

	Avoid gcc/clang warnings -Wunused-parameter
	* encoding.d (base64_mbstowcs, base64_wcslen, base64_wcstombs)
	(base64_range, all_range, bmp_range, uni16be_mbstowcs)
	(uni16le_mbstowcs, uni16be_wcstombs, uni16le_wcstombs)
	(uni32be_mbstowcs, uni32le_mbstowcs, uni32_wcslen)
	(uni32be_wcstombs, utf8_mblen, utf8_mbstowcs, utf8_wcslen)
	(java_wcstombs, java_mblen, java_mbstowcs, java_wcslen, nls_mblen)
	(nls_asciiext_mblen, nls_wcslen, nls_asciiext_wcslen):
	Use (void) to mark unused parameters.

2017-11-21  Sam Steingold  <sds@gnu.org>

	Avoid gcc/clang warnings -Wdangling-else (missed by #pragma).
	* foreign.d (PARSE-FOREIGN-INTTYPE): Add braces.
	* flo_rest.d, intelem.d (IF_LENGTH): Likewise.

2017-11-20  Bruno Haible  <bruno@clisp.org>

	Revert introduction of installed program 'clisp!' (no longer needed).
	* _clisp.c: Do not test SHEBANG_SUPPORT.
	* _distmakefile: Do not install 'clisp!'.
	* makemake.in: Likewise.
	* NEWS: Bug#699 is fixed without breaking backward compatibility.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Make it easier to test the optimizations in arilev0.d and ari*.d.
	* Makefile.devel (build-porting*-ari-asm, build-porting*-arilev0-asm):
	New targets.
	(multibuild-linux-hppa, multibuild-linux-i386): Depend on them.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Improve SYS::ADDRESS-OF in SINGLEMAP_MEMORY model.
	* misc.d (SYS::ADDRESS-OF): In SINGLEMAP_MEMORY model, do not mask
	out the type bits.

2017-11-19  Bruno Haible  <bruno@clisp.org>
