@@ -1,3 +1,9 @@
+2017-11-25  Bruno Haible  <bruno@clisp.org>
+
+	Make it possible to use '-nextgc-factor 0.001' with GENERATIONAL_GC.
+	* spvw.d (main): Move install_segv_handler invocation from here...
+	(init_memory): ... to here.
+
 2017-11-22  Sam Steingold  <sds@gnu.org>
 
 	Fix bug#375: (loop ... for x on x ...)
